# conan-example-boost

./: .gitignore  .travis.yml  CMakeLists.txt  README.adoc  build.sh  conanfile.py  main.cpp
consumer/: build.sh  conanfile.py
shared/: build.sh  conanfile.py
test_package/: conanfile.py
